--- a/examples/ewatercycle_api_notebook.ipynb
+++ b/examples/ewatercycle_api_notebook.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "canadian-seller",
    "metadata": {},
    "source": [
     "## eWaterCycle API\n",
@@ -18,7 +17,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prescribed-burlington",
    "metadata": {},
    "source": [
     "## Classes\n",
@@ -32,7 +30,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "united-category",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +38,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afraid-quick",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -54,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "occupational-receiver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +79,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fancy-brazil",
    "metadata": {},
    "source": [
     "## Preprocessing"
@@ -93,7 +87,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "second-probability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +128,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "liked-child",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +164,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "missing-sperm",
    "metadata": {},
    "source": [
     "## (Calibration)"
@@ -180,7 +171,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "enclosed-delay",
    "metadata": {},
    "source": [
     "## Running the model"
@@ -189,7 +179,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "graphic-accident",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +217,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "geological-accreditation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,9 +241,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`ModelData` mimicks `ForcingData` for some of the attributes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "first-state",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,12 +260,23 @@
     "model_output.to_dataframe()\n",
     "# read netcdf into a pandas dataframe\n",
     "model_output.to_xarray()\n",
-    "# read netcdf with xarray"
+    "# read netcdf with xarray\n",
+    "model_output.start_year\n",
+    "# 1990\n",
+    "model_output.end_year\n",
+    "# 2000\n",
+    "model_output.forcing\n",
+    "# 'ERA5'\n",
+    "model_output.model\n",
+    "# 'wflow'\n",
+    "model_output.catchment\n",
+    "# Meuse\n",
+    "model_output.log\n",
+    "# show log output"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "attempted-slovenia",
    "metadata": {},
    "source": [
     "## Analyzing the results"
@@ -280,14 +285,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "indoor-catch",
    "metadata": {},
    "outputs": [],
    "source": [
     "from ewatercycle.observations import get_data\n",
     "\n",
     "# station id is obtained from CFG / global settings\n",
-    "obs_data = get_data(\n",
+    "obs_timeseries = get_data(\n",
     "    'grdc',\n",
     "    start_year=1990,\n",
     "    end_year=2000,\n",
@@ -296,9 +300,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### hydrograph\n",
+    "\n",
+    "Some models also need some additional processing to get the data in the form of a timeseries required to calculate the hydrograph."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "specific-black",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,38 +318,142 @@
     "\n",
     "simulated_data = model_output.to_dataframe()\n",
     "\n",
+    "# some models need some additional processing to get a timeseries of the simulated data\n",
+    "\n",
+    "from ewatercycle.utils import guess_outlet_gridpoint\n",
+    "simulated_timeseries = guess_outlet_gridpoint(simulated_data, station_id='id', padding=5)\n",
+    "\n",
     "hydrograph(\n",
-    "    simulated=simulated_data,\n",
-    "    observed=obs_data,\n",
+    "    simulated=simulated_timeseries,\n",
+    "    observed=obs_timeseries,\n",
     "    ...\n",
     ")  # generate matplotlib plot"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "involved-chorus",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "guess_outlet_gridpoint"
+    "`hydrograph` can take a list of simulated data and observed data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tender-finder",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hydrograph(\n",
+    "    simulated=[simulated_timeseries, ..., ...],\n",
+    "    observed=[obs_timeseries, ..., ...],\n",
+    "    ...\n",
+    ")  # generate matplotlib plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sometimes we also want to show the forcing precipitation data at the top of the plot, this can also be a list."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "weekly-breathing",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "forcing_data = forcing_output.variables['pr']  # iris.cube.Cube\n",
+    "\n",
+    "# some models need some additional processing to get a timeseries of the precipitation\n",
+    "\n",
+    "from ewatercycle.utils import catchment_statistics\n",
+    "forcing_timeseries = catchment_statistics(forcing_data, catchment='Meuse', statistics='sum')\n",
+    "\n",
+    "hydrograph(\n",
+    "    simulated=[simulated_timeseries, ..., ...],\n",
+    "    observed=[obs_timeseries, ..., ...],\n",
+    "    forcing=[forcing_timeseries, ..., ...],\n",
+    "    ...\n",
+    ")  # generate matplotlib plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### metrics\n",
+    "\n",
+    "Use hydrostats to calculate metrics\n",
+    "\n",
+    "https://hydrostats.readthedocs.io/en/stable/Metrics.html#\n",
+    "\n",
+    "https://hydrostats.readthedocs.io/en/stable/ref_table.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hydrostats import metrics\n",
+    "\n",
+    "metrics.nse(\n",
+    "    simulated=simulated_data,\n",
+    "    observed=obs_data,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### save/load hydrograph results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ewatercycle.util import export_hydrograph_data, import_hydrograph_data\n",
+    "\n",
+    "# saves the data using pandas.to_csv (or otherwise)\n",
+    "\n",
+    "export_hydrograph_data(\n",
+    "    'my_output.csv',\n",
+    "    simulated=[simulated_data, ..., ...],\n",
+    "    observed=[obs_data, ..., ...],\n",
+    "    forcing=[forcing_data, ..., ...],\n",
+    ")\n",
+    "\n",
+    "# loads the data using pandas.from_csv (or otherwise)\n",
+    "\n",
+    "simulated, observed, forcing = import_hydrograph_data('my_output.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, axis = plt.figure()\n",
+    "\n",
+    "hydrograph(\n",
+    "    simulated=[simulated_data, ..., ...],\n",
+    "    observed=[obs_data, ..., ...],\n",
+    "    forcing=[forcing_data, ..., ...],\n",
+    "    ...\n",
+    "    axis=axis,\n",
+    ")  # generate matplotlib plot\n",
+    "\n",
+    "fig.savefig('output.jpg')"
+   ]
   }
  ],
  "metadata": {
