Add review comments

--- a/examples/ewatercycle_api_notebook.ipynb
+++ b/examples/ewatercycle_api_notebook.ipynb
@@ -81,7 +81,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocessing"
+    "## Preprocessing\n",
+    "\n",
+    "Note: the simple mapping of `catchment='Meuse'` will need something more explicit. Where exactly a catchment ends is not always straightforward, so different models and modellers disagree."
    ]
   },
   {
@@ -173,7 +175,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running the model"
+    "## Running the model\n",
+    "\n",
+    "Notes:\n",
+    " - Model class/initialize/setup should match PyMT.\n",
+    " - The shortcuts to create a model from a forcing and vice-versa are nice-to-haves.\n",
+    " - Support a more explicit run loop in addition to the single-line run method.\n",
+    " - The start and end time should be set in the setup rather than the run method (as most models expect this info in the configuration file)"
    ]
   },
   {
@@ -244,7 +252,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`ModelData` mimicks `ForcingData` for some of the attributes"
+    "`ModelData` mimicks `ForcingData` for some of the attributes\n",
+    "\n",
+    "Note: is it possible to create this structure while doing a more explicit loop in a nice way?"
    ]
   },
   {
@@ -279,7 +289,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How to access bmi variables?"
+    "How to access bmi variables?\n",
+    "\n",
+    "Note: bmi functions should be on the model object directly"
    ]
   },
   {
@@ -295,7 +307,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyzing the results"
+    "## Analyzing the results\n",
+    "\n",
+    "Note: Station ID may have to be explicit rather than a sessing/config."
    ]
   },
   {
