--- a/examples/ewatercycle_api_notebook.ipynb
+++ b/examples/ewatercycle_api_notebook.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "fa85f9f2",
    "metadata": {},
    "source": [
     "## eWaterCycle API\n",
@@ -17,6 +18,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a2880d39",
    "metadata": {},
    "source": [
     "## Classes\n",
@@ -30,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "264c5a5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +41,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "095fe407",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -50,6 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "adb161db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +84,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "34e77b0e",
    "metadata": {},
    "source": [
     "## Preprocessing\n",
@@ -89,6 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c4eca85c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ef3626a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,6 +174,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4d3d2d36",
    "metadata": {},
    "source": [
     "## (Calibration)"
@@ -173,6 +182,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7e3fde6d",
    "metadata": {},
    "source": [
     "## Running the model\n",
@@ -187,6 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bacbd7be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,6 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "19c92529",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,6 +262,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a57749f4",
    "metadata": {},
    "source": [
     "`ModelData` mimicks `ForcingData` for some of the attributes\n",
@@ -260,6 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3655ed28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,6 +301,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "32416e16",
    "metadata": {},
    "source": [
     "How to access bmi variables?\n",
@@ -297,6 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8d0a6f6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,6 +321,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "69e404da",
    "metadata": {},
    "source": [
     "## Analyzing the results\n",
@@ -315,6 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1465218d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,6 +349,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d9ed4f8d",
    "metadata": {},
    "source": [
     "### hydrograph\n",
@@ -341,6 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3a22cb72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,6 +382,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a22d1178",
    "metadata": {},
    "source": [
     "`hydrograph` can take a list of simulated data and observed data."
@@ -370,6 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "72f9c3f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,6 +404,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "87575220",
    "metadata": {},
    "source": [
     "Sometimes we also want to show the forcing precipitation data at the top of the plot, this can also be a list."
@@ -390,6 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3852b2e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,6 +434,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e54ce8c3",
    "metadata": {},
    "source": [
     "### metrics\n",
@@ -424,6 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4abb05ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,6 +463,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cdc5999d",
    "metadata": {},
    "source": [
     "### save/load hydrograph results"
@@ -445,6 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bdf91680",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,6 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bf9745db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,9 +517,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ewatercycle",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ewatercycle"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
