test lisflood class with the notebook

--- a/examples/lisflood.ipynb
+++ b/examples/lisflood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8c4327f7",
+   "id": "a7df922c",
    "metadata": {},
    "source": [
     "![image](https://www.ewatercycle.org/assets/logo.png)"
@@ -10,19 +10,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "baef5f0f",
+   "execution_count": 1,
+   "id": "7a758137",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/fakhereh/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/_warnings.py:18: UserWarning: \n",
+      "  Thank you for trying out the new ESMValCore API.\n",
+      "  Note that this API is experimental and may be subject to change.\n",
+      "  More info: https://github.com/ESMValGroup/ESMValCore/issues/498\n",
+      "/home/fakhereh/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:254: ESMValToolDeprecationWarning: `write_plots` will be removed in 2.4.0.\n",
+      "/home/fakhereh/miniconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:255: ESMValToolDeprecationWarning: `write_netcdf` will be removed in 2.4.0.\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
+    "import numpy as np\n",
     "from ewatercycle.models import Lisflood\n",
     "from ewatercycle.models.lisflood import LisfloodParameterSet"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "21c4f4c6",
+   "id": "7f4e7c15",
    "metadata": {},
    "source": [
     "## Run lisflood class"
@@ -30,16 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "4485fe5f",
+   "execution_count": 2,
+   "id": "627e6783",
    "metadata": {},
    "outputs": [],
    "source": [
     "parameterset = LisfloodParameterSet(\n",
-    "    # TODO one level down (+ /Lisflood01degree_masked)?\n",
-    "    root=Path('/projects/0/wtrcycle/comparison/lisflood_input'),\n",
-    "    # TODO dir or file (+ /model_mask.nc)?\n",
-    "    mask='/projects/0/wtrcycle/comparison/recipes_auxiliary_datasets/LISFLOOD',\n",
+    "    root=Path('/projects/0/wtrcycle/comparison/lisflood_input/Lisflood01degree_masked'),\n",
+    "    mask=Path('/projects/0/wtrcycle/comparison/recipes_auxiliary_datasets/LISFLOOD/model_mask.nc'),\n",
     "    config_template=Path('/projects/0/wtrcycle/comparison/lisflood_input/settings_templates/settings_lisflood.xml'),\n",
     "    lisvap_config_template=Path('/projects/0/wtrcycle/comparison/lisflood_input/settings_templates/settings_lisvap.xml'),\n",
     ")"
@@ -47,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "549cfb0e",
+   "execution_count": 3,
+   "id": "ca4a1983",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,15 +70,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "8266318f",
+   "execution_count": 4,
+   "id": "ba4f666d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running ewatercycle-lisflood-grpc4bmi.sif singularity container on port 32905\n"
+      "Running ewatercycle-lisflood-grpc4bmi.sif singularity container on port 37255\n"
      ]
     }
    ],
@@ -80,16 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "3c64991f",
+   "execution_count": 5,
+   "id": "ff1c2384",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/scratch/shared/ewatercycle/lisflood_20210413_191039/lisflood_setting_1990_1990.xml\n",
-      "/scratch/shared/ewatercycle/lisflood_20210413_191039\n"
+      "/scratch/shared/ewatercycle/lisflood_20210414_155718/lisflood_setting_1990_1990.xml\n",
+      "/scratch/shared/ewatercycle/lisflood_20210414_155718\n"
      ]
     }
    ],
@@ -100,8 +112,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "260a95ad",
+   "execution_count": 6,
+   "id": "2f64666a",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8316b8e0",
+   "id": "5086fc44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,19 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "5f4b30ed",
+   "execution_count": 7,
+   "id": "10977aec",
    "metadata": {},
    "outputs": [],
    "source": [
     "# initialize\n",
-    "model.initialize(config_file)"
+    "model.initialize(str(config_file))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "555cebe3",
+   "execution_count": 8,
+   "id": "5f0562cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,8 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "86f3b424",
+   "execution_count": 10,
+   "id": "c321e43e",
    "metadata": {},
    "outputs": [
     {
@@ -173,33 +185,52 @@
       "Fetching value range 4718520 - 5242800\n",
       "Fetching value range 5242800 - 5400000\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# get value\n",
+    "discharge = model.get_value('Discharge')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "49de6af1",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([nan, nan, nan, ..., nan, nan, nan])"
+       "3060"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# get value\n",
-    "model.get_value('Discharge')"
+    "np.count_nonzero(~np.isnan(discharge))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "56e893b3",
+   "execution_count": 15,
+   "id": "e917800a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# stop the model\n",
     "del model.bmi"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "792e9f8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
