Undo changes to example api notebook

--- a/examples/ewatercycle_api_notebook.ipynb
+++ b/examples/ewatercycle_api_notebook.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fa85f9f2",
    "metadata": {},
    "source": [
     "## eWaterCycle API\n",
@@ -18,7 +17,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2880d39",
    "metadata": {},
    "source": [
     "## Classes\n",
@@ -32,7 +30,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "264c5a5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +38,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "095fe407",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -54,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb161db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +79,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34e77b0e",
    "metadata": {},
    "source": [
     "## Preprocessing\n",
@@ -95,7 +89,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4eca85c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +130,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef3626a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +166,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d3d2d36",
    "metadata": {},
    "source": [
     "## (Calibration)"
@@ -182,7 +173,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e3fde6d",
    "metadata": {},
    "source": [
     "## Running the model\n",
@@ -197,7 +187,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bacbd7be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +225,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19c92529",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +250,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a57749f4",
    "metadata": {},
    "source": [
     "`ModelData` mimicks `ForcingData` for some of the attributes\n",
@@ -273,7 +260,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3655ed28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +287,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32416e16",
    "metadata": {},
    "source": [
     "How to access bmi variables?\n",
@@ -312,7 +297,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d0a6f6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +305,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69e404da",
    "metadata": {},
    "source": [
     "## Analyzing the results\n",
@@ -332,7 +315,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1465218d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +331,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9ed4f8d",
    "metadata": {},
    "source": [
     "### hydrograph\n",
@@ -360,7 +341,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a22cb72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +362,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a22d1178",
    "metadata": {},
    "source": [
     "`hydrograph` can take a list of simulated data and observed data."
@@ -391,7 +370,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72f9c3f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +382,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87575220",
    "metadata": {},
    "source": [
     "Sometimes we also want to show the forcing precipitation data at the top of the plot, this can also be a list."
@@ -413,7 +390,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3852b2e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +410,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e54ce8c3",
    "metadata": {},
    "source": [
     "### metrics\n",
@@ -449,7 +424,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4abb05ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +437,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdc5999d",
    "metadata": {},
    "source": [
     "### save/load hydrograph results"
@@ -472,7 +445,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdf91680",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +467,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf9745db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,9 +488,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ewatercycle",
    "language": "python",
-   "name": "python3"
+   "name": "ewatercycle"
   },
   "language_info": {
    "codemirror_mode": {
