Swap cfg_dir and cfg_file in output of setup.py

--- a/examples/wflow.ipynb
+++ b/examples/wflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "771d5eb4",
+   "id": "2c3da1df",
    "metadata": {},
    "source": [
     "# Running Wflow using the ewatercycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e4f9b77",
+   "id": "b7607b40",
    "metadata": {},
    "source": [
     "### 1. Copy an example case\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4a2ebd9",
+   "id": "b3d67e3c",
    "metadata": {
     "tags": []
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "708371f5",
+   "id": "18916ece",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0f3ff65",
+   "id": "f36ea91b",
    "metadata": {},
    "source": [
     "### 3. Setting up the model"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b091f44a",
+   "id": "21dafa75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ea9ce5c0",
+   "id": "2ab0fa98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "90a91869",
+   "id": "ba674fc4",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "373421b0",
+   "id": "dd10e136",
    "metadata": {
     "tags": []
    },
@@ -118,9 +118,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working directory created: wflow_20210415_150102\n",
-      "Created /home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_150102/wflow_ewatercycle.ini.\n",
-      "Started wflow container with working directory /home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_150102\n"
+      "Working directory created: wflow_20210415_150256\n",
+      "Created /home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_150256/wflow_ewatercycle.ini.\n",
+      "Started wflow container with working directory /home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_150256\n"
      ]
     }
    ],
@@ -130,20 +130,20 @@
     "\n",
     "# You can also add custom settings to overwrite whatever is in the cfg_file. \n",
     "# This is useful, as the WFLOW version we're using is inconsistent with the example config file. We need to add the RiverRunoff variable to the API section in the .ini-file:\n",
-    "cfg_dir, cfg_file = model.setup(cfg_dir='wflow_example_case/', cfg_file='./wflow_example_case/wflow_sbm.ini', API={\"RiverRunoff\": \"2, m^3/s\"})"
+    "cfg_file, cfg_dir = model.setup(cfg_dir='wflow_example_case/', cfg_file='./wflow_example_case/wflow_sbm.ini', API={\"RiverRunoff\": \"2, m^3/s\"})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ef7552e3",
+   "id": "099fc04c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_150102'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_150102/wflow_ewatercycle.ini'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_150256/wflow_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/wflow_20210415_150256'))"
       ]
      },
      "execution_count": 5,
@@ -152,12 +152,12 @@
     }
    ],
    "source": [
-    "cfg_dir, cfg_file"
+    "cfg_file, cfg_dir"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f79ae066",
+   "id": "6212948c",
    "metadata": {},
    "source": [
     "The `config_file` that is returned by `setup(...)` can be used to initialize the model:"
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b4989a64",
+   "id": "6de16725",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ce4c577",
+   "id": "a9dfcc83",
    "metadata": {},
    "source": [
     "### 4. Running the model"
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2f773830",
+   "id": "13712344",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "59469bb2",
+   "id": "256a45fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "13a260d6",
+   "id": "14225d8f",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "eb48f043",
+   "id": "92a36c62",
    "metadata": {
     "tags": []
    },
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7dd73467",
+   "id": "c4387b6d",
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b118cf84",
+   "id": "24c7a44e",
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d39e6e69",
+   "id": "ac11e55f",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4fa7d7c7",
+   "id": "21fb52aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8100ae58",
+   "id": "7a83fb17",
    "metadata": {},
    "outputs": [],
    "source": [
